--- a/test.html
+++ b/test.html
@@ -1,117 +1,113 @@
-<div className="main-container no-sidebar">
-        <div className="container">
-            <div className="main-content">
-                <div className="page-title">
-                    <h3>SHOPPING CART</h3>
-                </div>
-                <div className="row">
-                    <div className="col-sm-12 col-md-8">
-                        <table className="shop_table cart">
-                            <thead>
-                                <tr>
-                                    <th colspan="2" className="product-name">Product</th>
-                                    <th className="product-price">Price</th>
-                                    <th className="product-quantity">Qty</th>
-                                    <th className="product-subtotal">Total</th>
-                                    <th className="product-remove">&nbsp;</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td className="product-thumbnail"><img src="images/products/1.png" alt="" /></td>
-
-                                    <td className="product-name"><a href="#">Oversize Fit Trousers Sneaker</a></td>
-                                    <td>£85.00</td>
-                                    <td><input className="qty" type="text" value="+1"/></td>
-                                    <td>£85.00</td>
-                                    <td className="product-remove"><a href="#"><i className="fa fa-close"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td className="product-thumbnail"><img src="images/products/2.jpg" alt=""/></td>
-                                    <td className="product-name"><a href="#">Oversize Fit Trousers Sneaker</a></td>
-                                    <td>£85.00</td>
-                                    <td><input className="qty" type="text" value="+1"/></td>
-                                    <td>£85.00</td>
-                                    <td className="product-remove"><a href="#"><i className="fa fa-close"></i></a></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <div className="box-coupon">
-                            <div className="coupon">
-                                <h3 className="coupon-box-title">Coupon</h3>
-                                <div className="inner-box">
-                                    <input type="text" name="coupon_code" className="input-text" id="coupon_code" value="" placeholder="Coupon code"/>
-                                    <input type="submit" className="button" name="apply_coupon" value="Apply Coupon">
+<div className="row">
+                    <div className="col-sm-6">
+                        <div className="form-checkout">
+                            <h5 className="form-title">BILLING ADDRESS</h5>
+                            <div className="row">
+                                <div className="col-sm-6">
+                                    <p><input type="text" placeholder="First Name"/></p>
+                                </div>
+                                <div className="col-sm-6">
+                                    <p><input type="text" placeholder="Last Name"/></p>
+                                </div>
+                            </div>
+                            <p><input type="text" placeholder="Company Name"/></p>
+                            <p><input type="text" placeholder="Address"/></p>
+                            <p><input type="text" placeholder="Town / City"/></p>
+                            <p><input type="text" placeholder="State / Country"/></p>
+                            <div className="row">
+                                <div className="col-sm-6">
+                                    <p><input type="text" placeholder="Post Code"/></p>
+                                </div>
+                                <div className="col-sm-6">
+                                    <p><input type="text" placeholder="Phone"/></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div className="form-checkout order">
+                            <h5 className="form-title">YOUR ORDER</h5>
+                            <table className="shop-table order">
+                                <thead>
+                                    <tr>
+                                        <th className="product-name">PRODUCT</th>
+                                        <th className="total">TOTAL</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td className="product-name">Oversize Fit Trousers Sneaker</td>
+                                        <td className="total"><span className="price">£85.00</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td className="product-name">Oversize Fit Trousers Sneaker</td>
+                                        <td className="total"><span className="price">£85.00</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td className="subtotal">Subtotal</td>
+                                        <td className="total"><span className="price">£85.00</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td className="subtotal">Subtotal</td>
+                                        <td className="total">Internaltional</td>
+                                    </tr>
+                                    <tr>
+                                        <td className="subtotal">Coupon Discount</td>
+                                        <td className="total">0%</td>
+                                    </tr>
+                                    <tr className="order-total">
+                                        <td className="subtotal">ORDER TOTAL</td>
+                                        <td className="total"><span className="price">£170.00</span></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <button className="button btn-primary medium">PROCEED TO CHECKOUT</button>
+                        </div>
+                    </div>
+                    <div className="col-sm-6">
+                        <div className="form-checkout">
+                            <h5 className="form-title">SHIPPING ADDRESS</h5>
+                            <div className="row">
+                                <div className="col-sm-6">
+                                    <p><input type="text" placeholder="First Name"/></p>
+                                </div>
+                                <div className="col-sm-6">
+                                    <p><input type="text" placeholder="Last Name"/></p>
+                                </div>
+                            </div>
+                            <p><input type="text" placeholder="Company Name"/></p>
+                            <p><input type="text" placeholder="Address"/></p>
+                            <p><input type="text" placeholder="Town / City"/></p>
+                            <p><input type="text" placeholder="State / Country"/></p>
+                            <div className="row">
+                                <div className="col-sm-6">
+                                    <p><input type="text" placeholder="Post Code"/></p>
+                                </div>
+                                <div className="col-sm-6">
+                                    <p><input type="text" placeholder="Phone"/></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div className="form-checkout checkout-payment">
+                            <h5 className="form-title">YOUR PAYMENT</h5>
+                            <div className="payment_methods">
+                                <div className="payment_method">
+                                    <label><input name="payment_method" type="radio"/>DIRECT BANK TRANSFER</label>
+                                    <div className="payment_box">
+                                       Nulla laoreet ipsum dignissim magna maximus, vitae euismod turpis iaculis. Sed phare tra lacus sit amet dui consequat dignissim bibendum ullamcorper sem.
+                                    </div>
+                                </div>
+                                <div className="payment_method">
+                                    <label><input name="payment_method" type="radio"/>CASH ON DELIVERY</label>
+                                    <div className="payment_box">
+                                       Nulla laoreet ipsum dignissim magna maximus, vitae euismod turpis iaculis. Sed phare tra lacus sit amet dui consequat dignissim bibendum ullamcorper sem.
+                                    </div>
+                                </div>
+                                <div className="payment_method">
+                                    <label><input name="payment_method" type="radio" />PAYPAL</label>
+                                    <div className="payment_box">
+                                       Nulla laoreet ipsum dignissim magna maximus, vitae euismod turpis iaculis. Sed phare tra lacus sit amet dui consequat dignissim bibendum ullamcorper sem.
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div className="col-sm-12 col-md-4">
-                        <div className="box-cart-total">
-                            <h2 className="title">Cart Totals</h2>
-                            <table>
-                                <tbody><tr>
-                                    <td>Subtotal</td>
-                                    <td><span className="price">£170.00</span></td>
-                                </tr>
-                                <tr>
-                                    <td>Shipping</td>
-                                    <td>
-                                        <label><input name="shipping" type="radio"/>Free Shipping</label>
-                                        <label>
-                                            <input name="shipping" type="radio"/>Local Delivery
-                                            <span className="price">£50</span>
-                                        </label>
-                                        <label>
-                                            <input name="shipping" type="radio"/>Flat Rate
-                                            <span className="price">£100</span>
-                                        </label>
-                                        <label>
-                                            <input name="shipping" type="radio"/>International
-                                            <span className="price">£150</span>
-                                        </label>
-                                    </td>
-                                </tr>
-                                <tr className="order-total">
-                                    <td>Toal</td>
-                                    <td><span className="price">£320.00</span></td>
-                                </tr>
-                            </tbody></table>
-                            <button className="button medium">UPDATE CART</button>
-                            <button className="button btn-primary medium checkout-button">PROCEED TO CHECKOUT</button>
-                        </div>
-                    </div>
                 </div>
-            </div>
-        </div>
-        <div className="margin-top-60">
-           <div className="container">
-                <div className="row">
-                    <div className="col-sm-12 col-md-4">
-                        <div className="element-icon style2">
-                            <div className="icon"><i className="flaticon flaticon-origami28"></i></div>
-                            <div className="content">
-                                <h4 className="title">FREE SHIPPING WORLD WIDE</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div className="col-sm-12 col-md-4">
-                        <div className="element-icon style2">
-                            <div className="icon"><i className="flaticon flaticon-curvearrows9"></i></div>
-                            <div className="content">
-                                <h4 className="title">MONEY BACK GUARANTEE</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div className="col-sm-12 col-md-4">
-                        <div className="element-icon style2">
-                            <div className="icon"><i className="flaticon flaticon-headphones54"></i></div>
-                            <div className="content">
-                                <h4 className="title">ONLINE SUPPORT 24/7</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-           </div>
-        </div>
-    </div>
